[package]
name = "two_grids_script"
version = "0.1.0"
authors = ["Ian Anthony"]
edition = "2018"

[dependencies]
rayon = "1.5.3"
png = "0.17.5"
plotly = "0.7.0"
itertools = "0.10.0"
simple-uuid = { version = "*" }
sha-1 = {version = "0.9.7"}
nohash-hasher = "0.2.0"


[profile.release]
debug = true
# rustflags = "-C target-cpu=native"
# panic = "abort"
# lto = "fat"
# codegen-units = 1